# rag-report

./: .env  Breeze.py  Project-TAME.py  TAIDE.py  app.py  llm.py  pyproject.toml  resume.py
db/: chroma.sqlite3
templates/: index.html
