[tool.poetry]
name = "rag-report"
version = "0.1.0"
description = ""
authors = ["eros28095821 <eros28095821@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = {extras = ["ollama"], version = "^0.3.7"}
langchain-ollama = "^0.2.0"
chainlit = "^1.3.2"
transformers = "^4.46.2"
torch = "^2.5.1"
requests = "^2.32.3"
httpx = "^0.27.2"
chromadb = "^0.5.18"
neo4j = "^5.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
